package token

type RefreshToken struct {
}
